--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 set(CMAKE_INCLUDE_PATH /home/tomswinburne/.local/include)
+set(MEAM_INCLUDE_PATH /home/tomswinburne/Code/External/lammps_Aug18/lib/meam)
+
 set(CMAKE_LIBRARY_PATH /home/tomswinburne/.local/lib)
-set(CMAKE_CXX_COMPILER /home/tomswinburne/miniconda2/bin/mpicxx)
-set(CMAKE_C_COMPILER /home/tomswinburne/miniconda2/bin/mpicc)
+
+set(CMAKE_CXX_COMPILER /usr/bin/mpic++)
+set(CMAKE_C_COMPILER /usr/bin/mpicc)
 
 cmake_minimum_required(VERSION 2.8.9)
 project (pafi)
 
 include_directories(core)
-include_directories(${CMAKE_INCLUDE_PATH})
+
+include_directories(${CMAKE_INCLUDE_PATH} ${MEAM_INCLUDE_PATH})
 link_directories(${CMAKE_LIBRARY_PATH})
 
 add_definitions(-std=c++11 -O3 -g -DBOOST_ALL_DYN_LINK)
@@ -17,7 +21,8 @@ file(GLOB src_files "core/*")
 set(pafi_src_files ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
 set(prepare_src_files ${src_files} prepare/prepare.cpp prepare/prepare.hpp)
 add_executable(pafi ${pafi_src_files})
-target_link_libraries ( pafi pthread lammps_mpi boost_random boost_system boost_filesystem)
+target_link_libraries ( pafi pthread lammps_mpi boost_random boost_system boost_filesystem meam gfortran)
+
 
 # For later implemenation-
 # boost_timer boost_serialization
