--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@ knots/*
 run/*
 build/*
 
+
 # dev data
 lammps/*
 new_build/*
 example/*
 !example/Fe*
 !example/config.xml
+core_boost/*
 
 lib/*
 notes.py
