removed boost++ dependency

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,16 @@
 knots/*
 run/*
 build/*
-
+rosa_tests/*
 
 # dev data
+tex/*
 lammps/*
 new_build/*
 example/*
 !example/Fe*
 !example/config.xml
-core_boost/*
+core_boost/*.*
 
 lib/*
 notes.py
