--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ cmake_minimum_required(VERSION 2.8.9)
 project (pafi)
 
 include_directories(core)
+include_directories(rapidxml)
 
 include_directories(${CMAKE_INCLUDE_PATH})
 link_directories(${CMAKE_LIBRARY_PATH})
@@ -16,5 +17,5 @@ file(GLOB src_files "core/*")
 
 set(pafi_src_files ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
 add_executable(pafi ${pafi_src_files})
-target_link_libraries(pafi lammps_mpi)
 
+target_link_libraries(pafi lammps_mpi)
