small readme update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,6 @@ include_directories(${CMAKE_INCLUDE_PATH})
 link_directories(${CMAKE_LIBRARY_PATH})
 
 
-set(USE_MILADY 0)
-
-
-
-if(USE_MILADY)
-  set(MILADY_PATH ${PREFIX}/../Code/milady_lammps/lib/milady)
-  include_directories(${MILADY_PATH})
-  link_directories(${MILADY_PATH})
-endif(USE_MILADY)
-
-# NEWFIX : only enable if compiled with gatherscatter LAMMPS branch
 # VERBOSE : debugging output
 add_definitions(-std=c++11 -O3 -DLAMMPS_EXCEPTIONS -DNEWFIX) #-DVERBOSE)
 
@@ -35,10 +24,6 @@ add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
 add_executable(pafi-lammps-path ${src_files} pafi/pafi-lammps-path.cpp pafi/pafi.hpp)
 
 
-if(USE_MILADY)
-  target_link_libraries(pafi lammps_mpi gfortran lapack milady)
-else()
-  target_link_libraries(pafi lammps_mpi)# gfortran lapack milady)
-endif(USE_MILADY)
+target_link_libraries(pafi lammps_mpi)
 
 target_link_libraries(pafi-lammps-path lammps_mpi)
