--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 cmake_minimum_required(VERSION 3.5)
-set(PREFIX /home/tomswinburne/.altlocal) # example value
+set(PREFIX $ENV{HOME}/.local) # example value - this should match value in lammps.cmake
 set(CMAKE_INCLUDE_PATH ${PREFIX}/include) # location of copied lammps header directory (lammps/*.h)
 set(CMAKE_LIBRARY_PATH ${PREFIX}/lib) # location of liblammps_mpi.a
-set(CMAKE_CXX_COMPILER /usr/bin/mpicxx) # c++11 compatible compiler
+set(CMAKE_CXX_COMPILER /usr/bin/env mpic++) # c++11 compatible compiler
 
 project (pafi)
 
@@ -22,6 +22,6 @@ add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
 add_executable(pafi-lammps-path ${src_files} pafi/pafi-lammps-path.cpp pafi/pafi.hpp)
 
 
-target_link_libraries(pafi lammps_mpi)
+target_link_libraries(pafi lammps)
 
-target_link_libraries(pafi-lammps-path lammps_mpi)
+target_link_libraries(pafi-lammps-path lammps)
