--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 cmake_minimum_required(VERSION 3.5)
-set(PREFIX $ENV{HOME}/.local) # example value - this should match value in lammps.cmake
+set(PREFIX $ENV{PREFIX}) # example value
+set(CMAKE_CXX_COMPILER /usr/bin/env mpic++) # example value
 set(CMAKE_INCLUDE_PATH ${PREFIX}/include) # location of copied lammps header directory (lammps/*.h)
 set(CMAKE_LIBRARY_PATH ${PREFIX}/lib) # location of liblammps_mpi.a
-set(CMAKE_CXX_COMPILER /usr/bin/env mpic++) # c++11 compatible compiler
 
 project (pafi)
 
