--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.5)
 set(DEBUG 0)
 
 set(PREFIX "$ENV{PREFIX}") # example value
-set(CMAKE_CXX_COMPILER /usr/bin/env mpic++) # example value
+set(CMAKE_CXX_COMPILER /usr/local/bin/mpicxx) # example value
+set(CMAKE_C_COMPILER /usr/local/bin/mpicc) # example value
 set(CMAKE_INCLUDE_PATH ${PREFIX}/include) # location of copied lammps header directory (lammps/*.h)
 set(CMAKE_LIBRARY_PATH ${PREFIX}/lib) # location of liblammps_mpi.a
 
@@ -23,9 +24,12 @@ endif(DEBUG)
 file(GLOB src_files "core/*")
 
 add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
-add_executable(pafi-lammps-path ${src_files} pafi/pafi-lammps-path.cpp pafi/pafi.hpp)
+add_executable(pafi-lammps-preparation ${src_files} pafi/pafi-lammps-preparation.cpp pafi/pafi.hpp)
+add_executable(pafi-path-test ${src_files} pafi/pafi-path-test.cpp pafi/pafi.hpp)
 
 
 target_link_libraries(pafi lammps_mpi)
 
-target_link_libraries(pafi-lammps-path lammps_mpi)
+target_link_libraries(pafi-lammps-preparation lammps_mpi)
+
+target_link_libraries(pafi-path-test lammps_mpi)
