--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,15 +22,13 @@ if(DEBUG)
 	add_definitions(-g -DVERBOSE)
 endif(DEBUG)
 file(GLOB src_files "core/*")
-
+file(GLOB std_files "pafi/*")
 file(GLOB ti_files "pafi-ti/*")
+add_executable(pafi ${src_files} ${std_files})
+add_executable(pafi-ti ${src_files} ${ti_files})
 
-add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
-add_executable(pafi-ti ${src_files} ${ti_files} pafi-ti/pafi-ti.cpp pafi-ti/pafi-ti.hpp )
-
-add_executable(pafi-lammps-preparation ${src_files} pafi-test/pafi-lammps-preparation.cpp pafi-test/pafi.hpp)
-add_executable(pafi-path-test ${src_files} pafi-test/pafi-path-test.cpp pafi-test/pafi.hpp)
-
+add_executable(pafi-lammps-preparation ${src_files} pafi-test/pafi-lammps-preparation.cpp pafi-test/pafi-test.hpp)
+add_executable(pafi-path-test ${src_files} pafi-test/pafi-path-test.cpp pafi-test/pafi-test.hpp)
 
 target_link_libraries(pafi lammps_mpi)
 target_link_libraries(pafi-ti lammps_mpi)
