--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,14 @@
 
 # test data
 build/*
+mbuild/*
+examples/*
 run/*
 # dev data
 example/*
 !example/Fe*
+example/dumps/*
+!example/dumps/params_0
 !example/config.xml
 !example/sample_plot.py
 !example/alt_sample_plot.py
