--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,15 @@ cmake_minimum_required(VERSION 3.5)
 set(DEBUG 0)
 
 set(PREFIX "$ENV{PREFIX}") # example value
-set(CMAKE_CXX_COMPILER /usr/local/bin/mpicxx) # example value
-set(CMAKE_C_COMPILER /usr/local/bin/mpicc) # example value
+set(CMAKE_CXX_COMPILER mpicxx) # example value
+set(CMAKE_C_COMPILER mpicc) # example value
 set(CMAKE_INCLUDE_PATH ${PREFIX}/include) # location of copied lammps header directory (lammps/*.h)
 set(CMAKE_LIBRARY_PATH ${PREFIX}/lib) # location of liblammps_mpi.a
+
+# Just to find lammps for now
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
+
+
 
 project (pafi)
 
@@ -15,6 +20,9 @@ include_directories(rapidxml)
 
 include_directories(${CMAKE_INCLUDE_PATH})
 link_directories(${CMAKE_LIBRARY_PATH})
+
+find_package(LAMMPS REQUIRED)
+include_directories(${LAMMPS_INCLUDE_DIRS})
 
 # include VERBOSE for debugging output
 add_definitions(-std=c++11 -O3 -DLAMMPS_EXCEPTIONS -DLAMMPS_LIB_MPI)# -DVERBOSE)
@@ -28,8 +36,8 @@ add_executable(pafi-lammps-preparation ${src_files} pafi/pafi-lammps-preparation
 add_executable(pafi-path-test ${src_files} pafi/pafi-path-test.cpp pafi/pafi.hpp)
 
 
-target_link_libraries(pafi lammps_mpi)
+target_link_libraries(pafi ${LAMMPS_LIBRARIES})
 
-target_link_libraries(pafi-lammps-preparation lammps_mpi)
+target_link_libraries(pafi-lammps-preparation ${LAMMPS_LIBRARIES})
 
-target_link_libraries(pafi-path-test lammps_mpi)
+target_link_libraries(pafi-path-test ${LAMMPS_LIBRARIES})
