--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ file(GLOB src_files "core/*")
 
 add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
 add_executable(pafi-lammps-preparation ${src_files} utils/pafi-lammps-preparation.cpp utils/pafi-lammps-preparation.hpp)
-add_executable(pafi-path-test ${src_files} tests/pafi-path-test.cpp tests/pafi-path-test.hpp)
+add_executable(pafi-path-test ${src_files} utils/pafi-path-test.cpp utils/pafi-path-test.hpp)
+
 
 
 target_link_libraries(pafi ${LAMMPS_LIBRARIES})
