--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@
 cmake_minimum_required(VERSION 3.5)
 set(DEBUG 0)
 
+if(DEBUG)
+	message("DEBUG=1 MAKING VERBOSE BINARIES!")
+	add_definitions(-g -DVERBOSE)
+endif(DEBUG)
+
+
 set(PREFIX "$ENV{PREFIX}") # example value
 set(CMAKE_CXX_COMPILER mpicxx) # example value
 set(CMAKE_C_COMPILER mpicc) # example value
@@ -26,19 +32,20 @@ include_directories(${LAMMPS_INCLUDE_DIRS})
 
 # include VERBOSE for debugging output
 add_definitions(-std=c++11 -O3 -DLAMMPS_EXCEPTIONS -DLAMMPS_LIB_MPI)# -DVERBOSE)
-if(DEBUG)
-	add_definitions(-g -DVERBOSE)
-endif(DEBUG)
 file(GLOB src_files "core/*")
 
-add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
-add_executable(pafi-lammps-preparation ${src_files} utils/pafi-lammps-preparation.cpp utils/pafi-lammps-preparation.hpp)
-add_executable(pafi-path-test ${src_files} utils/pafi-path-test.cpp utils/pafi-path-test.hpp)
-
-
-
-target_link_libraries(pafi ${LAMMPS_LIBRARIES})
-
-target_link_libraries(pafi-lammps-preparation ${LAMMPS_LIBRARIES})
-
-target_link_libraries(pafi-path-test ${LAMMPS_LIBRARIES})
+if(DEBUG)
+	add_executable(pafi-verbose ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
+	add_executable(pafi-lammps-preparation-verbose ${src_files} utils/pafi-lammps-preparation.cpp utils/pafi-lammps-preparation.hpp)
+	add_executable(pafi-path-test-verbose ${src_files} utils/pafi-path-test.cpp utils/pafi-path-test.hpp)
+	target_link_libraries(pafi-verbose ${LAMMPS_LIBRARIES})
+	target_link_libraries(pafi-lammps-preparation-verbose ${LAMMPS_LIBRARIES})
+	target_link_libraries(pafi-path-test-verbose ${LAMMPS_LIBRARIES})
+else(DEBUG)
+	add_executable(pafi ${src_files} pafi/pafi.cpp pafi/pafi.hpp)
+	add_executable(pafi-lammps-preparation ${src_files} utils/pafi-lammps-preparation.cpp utils/pafi-lammps-preparation.hpp)
+	add_executable(pafi-path-test ${src_files} utils/pafi-path-test.cpp utils/pafi-path-test.hpp)
+	target_link_libraries(pafi ${LAMMPS_LIBRARIES})
+	target_link_libraries(pafi-lammps-preparation ${LAMMPS_LIBRARIES})
+	target_link_libraries(pafi-path-test ${LAMMPS_LIBRARIES})
+endif(DEBUG)
